<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:baselineAligned="false"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".Dashboard" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/Black"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp" >

                    <TextView
                        android:id="@+id/Welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Welcome:"
                        android:textSize="14sp" 
                         />

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="user"
                        android:textSize="14dp" 
                         />

                </LinearLayout>
                        
                <Button
                    android:id="@+id/LoginMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/Green"
                    android:onClick="Login"
                    android:text="@string/LoginMain"
                    android:textSize="12sp" 
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/RegisterMain"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/Green"
                    android:longClickable="true"
                    android:minHeight="30dp"
                    android:onClick="Register"
                    android:text="@string/RegisterMain"
                    android:textSize="12sp"
                    android:width="40dp" 
                    android:visibility="invisible" />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/Black" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/Background"
                        android:src="@drawable/movie_list_a" />

                    <Button
                        android:id="@+id/Trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/Trailer" />

                    <Button
                        android:id="@+id/Details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/Details" />

                    <Button
                        android:id="@+id/Gallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/Gallery" />

                    <Button
                        android:id="@+id/BuyTicket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BuyTicket" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

 <!--        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" > -->

            <LinearLayout
                android:id="@+id/right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
		            android:id="@+id/back"
		            android:layout_width="20dp"
		            android:layout_height="20dp"
		            android:layout_gravity="center_vertical"
		            android:layout_marginBottom="0dp"
		            android:layout_marginRight="0dp"
		            android:layout_marginTop="0dp"
		            android:onClick="back"
		            android:text="@string/Back" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="30dp"
                            android:text="It all Ends"
                            android:textSize="24sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/schedule"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:text="In Theatres in May 03, 2013"
                                android:textSize="18sp" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/Synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:text="Synopsis"
                        android:textColor="@color/White" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="When one of their own is kidnapped by an angry gangster, the Wolf Pack must track down Mr. Chow, who has escaped from prison and is on the lam." />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="In the aftermath of the death of Alan&apos;s father, the wolfpack decide to take Alan to get treated for his mental issues. But things start to go wrong on the way to the hospital as the wolfpack is assaulted and Doug is kidnapped. Now they must find Mr. Chow again in order to surrender him to the gangster who kidnapped Doug in order to save him." />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Genre:  Comedy"
                        android:textColor="@color/White" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Cast:  Bradley Cooper, Ed Helms, Zach Galifianakis, Justin Bartha  etc." />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_launcher" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_launcher" />
                    </LinearLayout>
                </LinearLayout>

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="930dp"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="desc"
                    android:gravity="center_horizontal"
                    android:numColumns="3"
                    android:verticalSpacing="25dp" >
                </GridView>
            </LinearLayout>

<!--         </HorizontalScrollView> -->

    </LinearLayout>
    </LinearLayout>
</ScrollView>